fix btn  on mobile

--- a/assets/css/now-playing.css
+++ b/assets/css/now-playing.css
@@ -77,6 +77,10 @@
         display: block;
         opacity: 1;
     }
+
+    .media-control {
+        margin: 0px;
+    }
     #root__now-playing__player-control__buttons  {
         display: flex;
         width: 100%;
@@ -201,7 +205,7 @@
             padding: 5px;
         }
         #root__now-playing__media-control * {
-            width: 15px;
+            width: 20px;
         }
         #root__now-playing__song__info__name{
             line-height: 35px;
